--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 .nav-title {
@@ -102,9 +102,21 @@ main {
 }
 
 .section-title {
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+}
+
+.what-i-p {
+    text-align: center;
+    width: 909px;
+    height: 90px;
+    font-weight: 400;
+    font-size: 18px;
+    color: #757575;
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 .section-description {
@@ -112,16 +124,104 @@ main {
     font-size: 18px;
     margin-bottom: 30px;
 }
+
 .about-info-container {
     display: flex;
     justify-content: space-around;
 }
+
 .about .info-title {
     font-size: 20px;
     color: #757575;
 }
+
 .info-description {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+/* what i do section */
+.what-i-do {
+    margin-top: 130px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
+}
+/* Resume Section */
+.resume {
+    margin-top: 130px;
+}
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .description {
+    color: #757575;
+}
+.resume-button {
+    margin-top: 40px;
+    text-align: center;
+}
+/* Contact styles */
+.contact {
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 100px 150px;
+}
+.contact a {
+    text-decoration: none;
+}
+.contact a, img {
+    margin-right: 10px;
+}
+.contact .section-title {
+    text-align: left;
+}
+.contact input[type="text"], input[type="email"],  textarea {
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 15px 20px;
+}
+input {
+    height: 20px;
 }
