--- a/styles/style.css
+++ b/styles/style.css
@@ -10,9 +10,10 @@
 .btn-primary {
     font-weight: 100;
     font-size: 20px;
-    height: 35px;
+    height: 50px;
     border: 0;
     border-radius: 5px;
+    padding: 0 20px;
     color: #FFFFFF;
     background: #FD6E0A;
 }
@@ -20,8 +21,8 @@
 .btn-primary1 {
     font-weight: 100;
     font-size: 20px;
-    height: 35px;
-    border: 1px solid orange;
+    height: 50px;
+    border: 1px solid #FD6E0A;
     border-radius: 5px;
     color: #FD6E0A;
     margin-left: 10px;
@@ -36,6 +37,7 @@
 }
 
 /* header and navigation styles */
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -87,12 +89,14 @@ nav li {
 }
 
 /* main section */
+
 main {
     max-width: 1140px;
     margin: 0 auto;
 }
 
 /* about section styles */
+
 .about {
     text-align: center;
     margin-top: 130px;
@@ -142,6 +146,7 @@ main {
 }
 
 /* what i do section */
+
 .what-i-do {
     margin-top: 130px;
 }
@@ -168,38 +173,48 @@ main {
 .skill-description {
     color: #757575;
 }
+
 /* Resume Section */
+
 .resume {
     margin-top: 130px;
 }
+
 .resume-content {
     display: flex;
     gap: 24px;
 }
+
 .resume-item {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
 .resume .title {
     font-weight: 700;
     font-size: 25px;
     color: #474747;
     margin-bottom: 10px;
 }
+
 .resume .sub-title {
     color: #757575;
     font-weight: 600;
     font-size: 20px;
     margin-bottom: 20px;
 }
+
 .resume .description {
     color: #757575;
 }
+
 .resume-button {
     margin-top: 40px;
     text-align: center;
 }
+
 /* Contact styles */
+
 .contact {
     display: flex;
     gap: 100px;
@@ -207,21 +222,26 @@ main {
     margin-top: 100px;
     padding: 100px 150px;
 }
+
 .contact a {
     text-decoration: none;
 }
+
 .contact a, img {
     margin-right: 10px;
 }
+
 .contact .section-title {
     text-align: left;
 }
+
 .contact input[type="text"], input[type="email"],  textarea {
     margin-bottom: 24px;
     border: 0;
     width: 100%;
     padding: 15px 20px;
 }
+
 input {
     height: 20px;
 }
